--- a/css/page-books.css
+++ b/css/page-books.css
@@ -1,3 +1,7 @@
+.img-fluid{
+    width: 100%;
+}
+
 hr.sep{
     border-style: dotted none;
     margin-bottom: 3rem;
@@ -5,6 +9,14 @@ hr.sep{
 
 .row{
     margin-bottom: 1rem;
+}
+
+/* landscape version of covers on smaller screens */
+.img-landscape{display: block;}
+.img-portrait{display: none;}
+@media (min-width:768px){ /* 'md' breakpoint */
+    .img-landscape{display: none;}
+    .img-portrait{display: block;}
 }
 
 /* END OF page-books.css
