--- a/css/main.css
+++ b/css/main.css
@@ -13,4 +13,12 @@ ul.link-list{
     list-style-type: none;
 }
 
+/* portrait version on larger screens */
+.img-landscape{display: block;}
+.img-portrait{display: none;}
+@media (min-width:576px){ /* 'sm' breakpoint */
+    .img-landscape{display: none;}
+    .img-portrait{display: block;}
+}
+
 /* END OF main.css */
